# nugget_util

./: .gitignore  .gitmodules  LICENSE  README.md  nugget-function.cmake
cmake/: Nugget.cmake  NuggetInternal.cmake  README.md
cmake/check-cpu-features/: Makefile  README.md  check-cpu-features.cpp
cmake/my-llvm-ir-cmake-lib/: LLVMIRUtil.cmake  LLVMIRUtilInternal.cmake  README.md
hook-helper/c-hooks/: CMakeLists.txt  README.md  hooks.cmake  param.cmake
hook-helper/c-hooks/analysis/: common.h  openmp-ir-bb-analysis.c  single-threaded-ir-bb-analysis.c
hook-helper/c-hooks/naive/: common.h  m5-naive.c  papi-naive.c
hook-helper/c-hooks/nugget/: CMakeLists.txt  common.h  openmp-m5-nugget.c  openmp-time-nugget.c  single-threaded-m5-nugget.c  single-threaded-papi-nugget.c
hook-helper/other-tools/gem5/: README.md  get-gem5-util.sh
hook-helper/other-tools/gem5/x86/: m5
hook-helper/other-tools/papi/: README.md  get-papi.sh
hook_helper/c_hooks/: hooks.cmake  param.cmake
hook_helper/c_hooks/analysis/: CMakeLists.txt  common.h  count-marker-execution.c  openmp-count-marker-execution.c  openmp-ir-bb-analysis-balance.c  openmp-ir-bb-analysis.c  single-threaded-ir-bb-analysis-balance.c  single-threaded-ir-bb-analysis.c  single-threaded-papi-analysis.c
hook_helper/c_hooks/naive/: CMakeLists.txt  common.h  m5-naive.c  nothing-naive.c  sniper-naive.c  time-naive.c
hook_helper/c_hooks/nugget/: CMakeLists.txt  empty-hooks-nugget.c  openmp-empty-m5-nugget.c  openmp-m5-nugget.c  openmp-sniper-nugget.c  openmp-time-nugget.c  single-threaded-all-empty-m5-nugget.c  single-threaded-empty-dynamorio-nugget.c  single-threaded-empty-m5-nugget.c  single-threaded-m5-nugget.c  single-threaded-sniper-nugget.c  single-threaded-time-nugget.c
hook_helper/other_tools/gem5/: get-gem5-util.sh
hook_helper/other_tools/papi/: get-papi.sh  install-test-papi-combos.sh  test_papi_combos.c
hook_helper/other_tools/papi/needed-lib/: install-pfm.sh
hook_helper/other_tools/sniper/: Makefile  get-sniper-include.sh  sim_api.c  sim_api.h  test.c
other_tools/dynamoRIO/: get-dynamorio.sh
other_tools/dynamoRIO/clients/track_inst_between_markers/: CMakeLists.txt  track_inst_between_markers.c
other_tools/dynamoRIO/clients/track_markers/: CMakeLists.txt  track_markers.c
python-processing/: README.md  analysis-functions.py  analysis_functions.py
python_processing/: README.md  analysis_functions.py  plot.py  requirements.txt
