cmake_minimum_required(VERSION 3.30)
project(track_markers C)

set(CMAKE_POSITION_INDEPENDENT_CODE ON)
if(DEFINED ENV{DynamoRIO_DIR} AND NOT "$ENV{DynamoRIO_DIR}" STREQUAL "")
    message(STATUS "Using DynamoRIO_DIR from environment: ${DynamoRIO_DIR}")
    set(DynamoRIO_DIR $ENV{DynamoRIO_DIR})
else()
    message(WARNING "DynamoRIO_DIR environment variable is not set. Using default path.")
    set(DynamoRIO_DIR ${CMAKE_CURRENT_LIST_DIR}/../../dynamorio/build/cmake)
endif()
find_package(DynamoRIO REQUIRED)
if (NOT DynamoRIO_FOUND)
  message(FATAL_ERROR "DynamoRIO package required to build")
endif()
include_directories(${DynamoRIO_DIR}/../ext/include)
add_library(track_markers SHARED track_markers.c)
configure_DynamoRIO_client(track_markers)
